www/styles/docs.scss
@use "tools" as *;

.docs {
  --nav-width: 240px;
  --toc-width: 270px;
  --nav-height: 4rem;
  --site-gap: clamp(2em, 4.25vmax, 4em);

  // Top-Nav
  &__primary-nav {
    background-color: var(--color-primary-8);
    position: relative;
    z-index: 1;
    box-shadow: var(--shadow-heavy);

    &__content {
      max-width: var(--content-max-width);
      margin-inline: auto;
      height: var(--nav-height);
      display: flex;
      align-items: center;
      gap: 2em;
      padding: var(--default-padding);
      padding-block: 0;
      @media (min-width: breakpoint(tablet)) {
        padding-inline: 1.25em;
      }
      @media (min-width: breakpoint(wrapper)) {
        padding-inline: 0;
      }
    }

    &-button {
      border: none;
      padding: 0;
      background-color: transparent;
      display: inlne-flex;
      align-items: center;
      font-size: 1.25em;
      color: var(--color-primary-1);
      transition: color var(--animation-base-duration) var(--animation-base-easing);
      @media (min-width: breakpoint(tablet)) {
        display: none;
      }

      &:hover {
        cursor: pointer;
        color: var(--color-accent-3);
      }

      & > * {
        pointer-events: none; // makes sure, that the click event gets triggered, even if clicked on its child elements
      }

      svg {
        display: block;
        width: 1em;
        height: auto;
      }
    }

    a:not(.docs__home-link) {
      @include gradient-link;
      @include underline-link-in-forced-colors;
      color: white;
      text-decoration: none;
    }
  }

  &__home-link,
  &__home-link:visited {
    color: white;
    text-decoration: none;
    font-weight: bold;
    font-size: 32px;
    margin-inline-end: auto;
    display: flex;
    align-items: baseline;
    gap: 1rem;
    transform: translateY(0.1em);

    svg {
      height: 1.1em;
      width: auto;
      align-self: flex-start;
    }

    i {
      color: var(--color-accent-4);
      font-style: normal;
    }

    ~ a {
      padding-inline: 0.5em !important;
      @media (min-width: 1040px) {
        transform: translateX(0.5em); // the background is not visible unless hovered. Meaning, it looks misaligned unless hovered. This offsets it.
      }
    }
  }

  // Docs Navigation
  &__side-nav {
    --bg: var(--color-primary-8);
    list-style: none;
    padding: 1rem 0;
    background: var(--bg);
    border-radius: 0.5rem;
    position: sticky;
    top: var(--site-gap);
    margin-block-start: 0;
    box-shadow: var(--shadow-heavy);
    display: flex;
    flex-direction: column;
    gap: 1.5em;
    outline: 2px solid transparent; // outline for forced colors mode
    @include gradient-links;
    @media (max-width: breakpoint(tablet)) {
      position: absolute;
      width: 0;
      min-width: max-content;
      height: 100%;
      opacity: 0;
      overflow: hidden;
      top: 0;
      padding-block-start: calc(var(--nav-height) + 1em);
      left: 0;
      z-index: 0;
      border-radius: 0;
      transition-property: width, opacity;
      transition-duration: var(--animation-base-duration);
      transition-timing-function: var(--animation-base-easing);

      &.is-hidden {
        display: none;
      }

      &.is-open {
        width: 75vw;
        opacity: 1;
        overflow: auto;
      }
    }
    @media (min-width: breakpoint(tablet)) {
      grid-column: side-start / side-end;
    }

    .category {
      font-family: var(--pro-hacker-font);
      text-transform: uppercase;
      letter-spacing: 0.15em;
      font-size: 0.75em;
      display: block;
      padding-inline: 1rem;
      color: var(--color-primary-2);
      margin-block-end: 0.5em;
    }

    li {
      margin: 0;
    }

    > li {
      margin: 0;

      > ul {
        list-style: none;
        padding-inline-start: 0;
      }
    }

    a,
    a:visited {
      @include underline-link-in-forced-colors;
      display: block;
      padding: 0.6rem 1rem;
      text-decoration: none;
      color: var(--white);
      position: relative;
      line-height: 1;
      border-radius: 0;

      &[aria-current="page"] {
        color: var(--color-accent-4);

        &::before {
          content: "";
          width: 4px;
          height: 100%;
          position: absolute;
          top: 0;
          left: 0;
          background: linear-gradient(to bottom, var(--gradient-slinkity));
          opacity: 1;
          transition-property: opacity;
          transition-duration: inherit;
          transition-timing-function: inherit;
          @media (forced-colors: active) {
            forced-color-adjust: none;
            background-image: none;
            background-color: linktext;
          }
        }

        &:where(:hover, :focus) {
          color: var(--color-dark);

          &::before {
            opacity: 0;
            @media (forced-colors: active) {
              opacity: 1;
            }
          }
        }
      }

      &:where(:hover, :focus) {
        color: var(--color-dark);
      }
    }
  }

  // this TOC is shown on desktop
  &__toc {
    @include content-card;
    display: none;
    outline: 2px solid transparent; // outline for forced colors mode
    @media (min-width: breakpoint(wrapper)) {
      width: 100%;
      display: block;
      grid-column: toc-start / toc-end;
      margin-block-start: 0;
      padding: 1rem;
      position: sticky;
      top: var(--site-gap);
    }
  }

  // Docs Page Content
  &__container {
    max-width: var(--content-max-width);
    margin-inline: auto;
    margin-block-start: var(--site-gap);
    display: grid;
    grid-template-columns: 1fr;
    align-items: flex-start;
    gap: calc(var(--site-gap) / 2);
    @media (min-width: breakpoint(tablet)) {
      grid-template-columns: [side-start] var(--nav-width) [side-end content-start] 1fr [content-end];
    }
    @media (min-width: breakpoint(wrapper)) {
      grid-template-columns: [side-start] var(--nav-width) [side-end content-start] 1fr [content-end toc-start] var(--toc-width) [toc-end];
      grid-auto-flow: dense;
    }

    &__content {
      @include content-card;
      overflow: auto;
      max-width: 100%;
      margin: 0;
      @media (min-width: breakpoint(tablet)) {
        grid-column: content-start / content-end;
      }
      @media (forced-colors: active) {
        padding-block-start: 0;
      }

      // this TOC is shown on smaller screens
      &-toc {
        --bg: hsl(var(--color-hs-primary) calc(var(--color-weight-7) - 6.5%));
        padding: calc(var(--spacing) * 1.5);
        background-color: var(--bg);
        border-radius: 5px;
        @media (min-width: breakpoint(wrapper)) {
          display: none;
        }

        & + * {
          margin-block: 2.5em;
        }
      }

      :where(h1) {
        margin-block-start: 0;
        font-size: 2.25em;

        + * {
          margin-block-start: 1.5em;
        }
      }

      :where(pre) {
        border: 1px solid var(--color-primary-7);
        border-radius: 2px;
        background-image:
          linear-gradient(
            to bottom right,
            var(--color-primary-9),
            transparent
          ) !important;

        > code {
          background: none;
          border: 0;
          box-shadow: none;
        }
      }

      :where(p > strong:only-child > a:only-child) {
        font-size: 1.17em;
      }

      :where(table) {
        background-color: var(--color-primary-7);
        width: 100%;
        border-radius: var(--rounded-corners);
        margin-block-end: 1.5em;
        border-collapse: collapse;

        td,
        th {
          padding: 0.25em 1em;
          text-align: left;

          &:last-child {
            text-align: center;
          }
        }

        th {
          padding: 1em;
        }

        tr:nth-child(even) {
          td {
            background-color: hsl(var(--color-hs-primary) calc(var(--color-weight-7) - 4%));
          }
        }

        tr:last-child {
          td {
            padding-block-end: 1em;
          }
        }
      }
    }
  }
}

